// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `<div />`;

exports[`should render correctly 2`] = `
<div>
  {"id":"check-status","type":"NONSTOP","caption":"preparing","isProgress":true,"message":""}
  {"id":"get_log","type":"STEPPING","message":"downloading","isProgress":true,"percentage":0,"caption":""}
</div>
`;

exports[`should render correctly 3`] = `
<div>
  {"id":"check-status","type":"NONSTOP","caption":"preparing","isProgress":true,"message":""}
  {"id":"get_log","type":"STEPPING","message":"downloading","isProgress":true,"percentage":0,"caption":""}
</div>
`;

exports[`should render correctly 4`] = `
<div>
  {"id":"check-status","type":"NONSTOP","caption":"preparing","isProgress":true,"message":""}
  {"id":"get_log","type":"STEPPING","message":"downloading","isProgress":true,"percentage":100,"caption":""}
</div>
`;

exports[`should render correctly 5`] = `
<div>
  {"id":"check-status","type":"NONSTOP","caption":"prepared","isProgress":true,"message":"prepared"}
  {"id":"get_log","type":"STEPPING","message":"downloading","isProgress":true,"percentage":100,"caption":""}
</div>
`;

exports[`should render correctly 6`] = `
<div>
  {"id":"check-status","type":"NONSTOP","caption":"prepared","isProgress":true,"message":"prepared"}
  {"id":"get_log","type":"STEPPING","message":"downloading","isProgress":true,"percentage":100,"caption":""}
  {"type":"SHOW_POPUP_INFO","message":"File already exists, do you want to replace it?","buttonType":"YES_NO","caption":"INFO","buttons":[{"label":"Yes","className":"btn-default primary"},{"label":"No","className":"btn-default"}]}
  {"type":"SHOW_POPUP_WARNING","message":"Some texts were changed to other Fonts when parsing texts to paths and some character may not converted normally.","checkbox":{"text":"Don't Show this next time."},"caption":"WARNING","buttons":[{"label":"OK","className":"btn-default primary"}]}
  {"id":"monitor-reconnect","type":"SHOW_POPUP_ERROR","buttonType":"RETRY_CANCEL","message":"The connection with the machine has broken. Do you want to reconnect?","caption":"UH-OH","buttons":[{"label":"Retry","className":"btn-default primary"},{"label":"Cancel","className":"btn-default"}]}
  {"buttonType":"CONFIRM_CANCEL","message":"This will load arrangement of presets and replacing customized parameters set in the file, are you sure to proceed?","buttons":[{"label":"Confirm","className":"btn-default primary"},{"label":"Cancel","className":"btn-default"}]}
  {"id":"latest-firmware","message":"You have the latest Machine firmware","caption":"Machine firmware Update","buttonType":"CUSTOM_CANCEL","buttonLabels":["UPDATE"],"buttons":[{"label":"UPDATE","className":"btn-default primary"},{"label":"Cancel","className":"btn-default"}]}
  {"message":"Unable to find machine ","buttons":[{"label":"Set Connection","className":"btn-default primary"},{"label":"Retry","className":"btn-default primary"}]}
  {"id":"machine-info","type":"SHOW_POPUP_INFO","caption":"abcde","message":"abcde: 111.222.333.444","buttonLabels":["Test Network","OK"],"callbacks":[null,null],"primaryButtonIndex":1,"buttons":[{"label":"Test Network","className":"btn-default"},{"label":"OK","className":"btn-default primary"}]}
</div>
`;

exports[`should render correctly 7`] = `
<div>
  {"id":"check-status","type":"NONSTOP","caption":"prepared","isProgress":true,"message":"prepared"}
  {"id":"get_log","type":"STEPPING","message":"downloading","isProgress":true,"percentage":100,"caption":""}
  {"type":"SHOW_POPUP_INFO","message":"File already exists, do you want to replace it?","buttonType":"YES_NO","caption":"INFO","buttons":[{"label":"Yes","className":"btn-default primary"},{"label":"No","className":"btn-default"}]}
  {"type":"SHOW_POPUP_WARNING","message":"Some texts were changed to other Fonts when parsing texts to paths and some character may not converted normally.","checkbox":{"text":"Don't Show this next time."},"caption":"WARNING","buttons":[{"label":"OK","className":"btn-default primary"}]}
  {"id":"monitor-reconnect","type":"SHOW_POPUP_ERROR","buttonType":"RETRY_CANCEL","message":"The connection with the machine has broken. Do you want to reconnect?","caption":"UH-OH","buttons":[{"label":"Retry","className":"btn-default primary"},{"label":"Cancel","className":"btn-default"}]}
  {"buttonType":"CONFIRM_CANCEL","message":"This will load arrangement of presets and replacing customized parameters set in the file, are you sure to proceed?","buttons":[{"label":"Confirm","className":"btn-default primary"},{"label":"Cancel","className":"btn-default"}]}
  {"id":"latest-firmware","message":"You have the latest Machine firmware","caption":"Machine firmware Update","buttonType":"CUSTOM_CANCEL","buttonLabels":["UPDATE"],"buttons":[{"label":"UPDATE","className":"btn-default primary"},{"label":"Cancel","className":"btn-default"}]}
  {"message":"Unable to find machine ","buttons":[{"label":"Set Connection","className":"btn-default primary"},{"label":"Retry","className":"btn-default primary"}]}
</div>
`;

exports[`should render correctly 8`] = `
<div>
  {"id":"check-status","type":"NONSTOP","caption":"prepared","isProgress":true,"message":"prepared"}
  {"type":"SHOW_POPUP_INFO","message":"File already exists, do you want to replace it?","buttonType":"YES_NO","caption":"INFO","buttons":[{"label":"Yes","className":"btn-default primary"},{"label":"No","className":"btn-default"}]}
  {"type":"SHOW_POPUP_WARNING","message":"Some texts were changed to other Fonts when parsing texts to paths and some character may not converted normally.","checkbox":{"text":"Don't Show this next time."},"caption":"WARNING","buttons":[{"label":"OK","className":"btn-default primary"}]}
  {"id":"monitor-reconnect","type":"SHOW_POPUP_ERROR","buttonType":"RETRY_CANCEL","message":"The connection with the machine has broken. Do you want to reconnect?","caption":"UH-OH","buttons":[{"label":"Retry","className":"btn-default primary"},{"label":"Cancel","className":"btn-default"}]}
  {"buttonType":"CONFIRM_CANCEL","message":"This will load arrangement of presets and replacing customized parameters set in the file, are you sure to proceed?","buttons":[{"label":"Confirm","className":"btn-default primary"},{"label":"Cancel","className":"btn-default"}]}
  {"id":"latest-firmware","message":"You have the latest Machine firmware","caption":"Machine firmware Update","buttonType":"CUSTOM_CANCEL","buttonLabels":["UPDATE"],"buttons":[{"label":"UPDATE","className":"btn-default primary"},{"label":"Cancel","className":"btn-default"}]}
  {"message":"Unable to find machine ","buttons":[{"label":"Set Connection","className":"btn-default primary"},{"label":"Retry","className":"btn-default primary"}]}
</div>
`;
